_includes/manuals/1.5/3.2.2_installer_options.md

The installer is a collection of Puppet modules, which have a large number of parameters available to customize the configuration.  Parameters can be set by running `foreman-installer` with arguments, e.g. `--foreman-db-type`, changing settings in interactive mode or by setting up an answers file.

The precedence for settings is for those set by arguments to foreman-installer or interactive mode, then the answers file, then the Puppet manifest defaults.

#### foreman-installer arguments

Every parameter available in the installer can be set using command line arguments to `foreman-installer`.  Run `foreman-installer --help` for a list of every available option.

When running the installer, all arguments passed on the command line will be persisted by default to /etc/foreman/foreman-installer.yaml and used automatically on subsequent runs, without needing to specify those arguments again.  This persistence can be disabled with the `-b` option.

#### Interactive mode

The installer also provides a text driven interface to customize configuration parameters, and can be run by executing:

{% highlight bash %}
foreman-installer -i
{% endhighlight %}

#### Plugins and compute resources

The installer contains a number of high level modules (e.g. "foreman", "puppet") and additionally a number of smaller modules for additional functionality, such as plugins and compute resource support.  These can be added with the "--enable" switches, or the default options can be disabled with "--no-enable" switches.

More information about compute resources can be found in the [Compute Resources section](/manuals/{{page.version}}/index.html#5.2ComputeResources) and plugins in the [Plugins section](/manuals/{{page.version}}/index.html#6.Plugins).

<!-- Generated by hand from `foreman-installer -h | grep enable-` -->
<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman</td>
        <td>Enable 'foreman' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ec2</td>
        <td>Enable 'foreman_compute_ec2' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-gce</td>
        <td>Enable 'foreman_compute_gce' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-libvirt</td>
        <td>Enable 'foreman_compute_libvirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-openstack</td>
        <td>Enable 'foreman_compute_openstack' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ovirt</td>
        <td>Enable 'foreman_compute_ovirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-rackspace</td>
        <td>Enable 'foreman_compute_rackspace' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-vmware</td>
        <td>Enable 'foreman_compute_vmware' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-bootdisk</td>
        <td>Enable 'foreman_plugin_bootdisk' puppet module (<a href="https://github.com/theforeman/foreman_bootdisk">foreman_bootdisk</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-chef</td>
        <td>Enable 'foreman_plugin_chef' puppet module (<a href="https://github.com/theforeman/foreman_chef">foreman_chef</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-default-hostgroup</td>
        <td>Enable 'foreman_plugin_default_hostgroup' puppet module (<a href="https://github.com/GregSutcliffe/foreman_default_hostgroup">foreman_default_hostgroup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-discovery</td>
        <td>Enable 'foreman_plugin_discovery' puppet module (<a href="https://github.com/theforeman/foreman_discovery">foreman_discovery</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hooks</td>
        <td>Enable 'foreman_plugin_hooks' puppet module (<a href="https://github.com/theforeman/foreman_hooks">foreman_hooks</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppetdb</td>
        <td>Enable 'foreman_plugin_puppetdb' puppet module (<a href="https://github.com/theforeman/puppetdb_foreman">puppetdb_foreman</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-setup</td>
        <td>Enable 'foreman_plugin_setup' puppet module (<a href="https://github.com/theforeman/foreman_setup">foreman_setup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-templates</td>
        <td>Enable 'foreman_plugin_templates' puppet module (<a href="https://github.com/theforeman/foreman_templates">foreman_templates</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy</td>
        <td>Enable 'foreman_proxy' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-puppet</td>
        <td>Enable 'puppet' puppet module</td>
      </tr>
    </tbody>
  </table>
</div>

#### Available options

<!-- Generated with:
/usr/lib/ruby/gems/*/bin/kafo-export-params -c /usr/share/foreman-installer/config/foreman-installer.yaml -f html
-->
<div id="all-installer-options">
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--foreman-app-root</td>
        <td>Name of foreman root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-authentication</td>
        <td>Enable users authentication (default user:admin pw:changeme)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-epel-repo</td>
        <td>If disabled the EPEL repo will not be configured on RedHat family systems.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-scl-repo</td>
        <td>If disabled the the SCL repo will not be configured on Red Hat clone systems. (Currently only installs repos for CentOS and Scientific)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-adapter</td>
        <td>Database 'production' adapter</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-database</td>
        <td>Database 'production' database (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-host</td>
        <td>Database 'production' host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-manage</td>
        <td>if enabled, will install and configure the database server on this host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-password</td>
        <td>Database 'production' password (default is random)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-port</td>
        <td>Database 'production' port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-sslmode</td>
        <td>Database 'production' ssl mode</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-type</td>
        <td>Database 'production' type (valid types: mysql/postgresql/sqlite)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-username</td>
        <td>Database 'production' user (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-environment</td>
        <td>Rails environment of foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-foreman-url</td>
        <td>URL on which foreman is going to run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-gpgcheck</td>
        <td>turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-group</td>
        <td>Primary group for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-locations-enabled</td>
        <td>Enable locations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-active</td>
        <td>Enable OAuth authentication for REST API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-key</td>
        <td>OAuth consumer key</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-secret</td>
        <td>OAuth consumer secret</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-map-users</td>
        <td>Should foreman use the foreman_user header to identify API user?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-organizations-enabled</td>
        <td>Enable organizations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger</td>
        <td>Configure foreman via apache and passenger</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-interface</td>
        <td>Defines which network interface passenger should listen on, undef means all interfaces</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-scl</td>
        <td>Software collection name (on RHEL currently 'ruby193', undef on others)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-puppet-home</td>
        <td>Puppet home directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-repo</td>
        <td>This can be stable, rc, or nightly</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-selinux</td>
        <td>when undef, foreman-selinux will be installed if SELinux is enabled setting to false/true will override this check (e.g. set to false on 1.1)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-ca</td>
        <td>Defines Apache mod_ssl SSLCertificateChainFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-cert</td>
        <td>Defines Apache mod_ssl SSLCertificateFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-key</td>
        <td>Defines Apache mod_ssl SSLCertificateKeyFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ssl</td>
        <td>Enable and set require_ssl in Foreman settings (note: requires passenger, SSL does not apply to kickstarts)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-unattended</td>
        <td>Should foreman manage host provisioning as well</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-use-vhost</td>
        <td>Enclose apache configuration in <VirtualHost>...</VirtualHost></td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user</td>
        <td>User under which foreman will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user-groups</td>
        <td>Additional groups for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-version</td>
        <td>foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-autosign-location</td>
        <td>Path to autosign configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc</td>
        <td>Use BMC</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc-default-provider</td>
        <td>BMC default provider.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp</td>
        <td>Use DHCP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-config</td>
        <td>DHCP config file path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-gateway</td>
        <td>DHCP pool gateway</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-interface</td>
        <td>DHCP listen interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-name</td>
        <td>DHCP key name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-secret</td>
        <td>DHCP password</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-leases</td>
        <td>DHCP leases file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-managed</td>
        <td>DHCP is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-nameservers</td>
        <td>DHCP nameservers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-range</td>
        <td>Space-separated DHCP pool range</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-vendor</td>
        <td>DHCP vendor</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dir</td>
        <td>Foreman proxy install directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns</td>
        <td>Use DNS</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-forwarders</td>
        <td>DNS forwarders</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-interface</td>
        <td>DNS interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-managed</td>
        <td>DNS is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-reverse</td>
        <td>DNS reverse zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-server</td>
        <td>Address of DNS server to manage</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-zone</td>
        <td>DNS zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-base-url</td>
        <td>Base Foreman URL used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-gpgcheck</td>
        <td>Turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-keyfile</td>
        <td>DNS server keyfile path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log</td>
        <td>Foreman proxy log file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-manage-sudoersd</td>
        <td>Whether to manage File['/etc/sudoers.d'] or not.  When reusing this module, this may be disabled to let a dedicated sudo module manage it instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-key</td>
        <td>OAuth key to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-secret</td>
        <td>OAuth secret to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-effective-user</td>
        <td>User to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-port</td>
        <td>Port on which will foreman proxy listen</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-group</td>
        <td>Groups of Foreman proxy user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca</td>
        <td>Use Puppet CA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca-cmd</td>
        <td>Puppet CA command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetdir</td>
        <td>Puppet var directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun</td>
        <td>Enable puppet run/kick management</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-cmd</td>
        <td>Puppet run/kick command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-provider</td>
        <td>Set puppet_provider to handle puppet run/kick via mcollective</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-register-in-foreman</td>
        <td>Register proxy back in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-name</td>
        <td>Proxy name which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-proxy-url</td>
        <td>Proxy URL which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-repo</td>
        <td>This can be stable, rc, or nightly</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl</td>
        <td>Enable SSL, ensure proxy is added with "https://" protocol if true</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-ca</td>
        <td>If CA is specified, remote Foreman host will be verified</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-cert</td>
        <td>Used to communicate to Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-key</td>
        <td>Corresponding key to a certificate</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssldir</td>
        <td>Puppet CA ssl directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp</td>
        <td>Use TFTP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-dirs</td>
        <td>Directories to be create in $tftp_root</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-root</td>
        <td>TFTP root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-servername</td>
        <td>Defines the TFTP Servername to use, overrides the name in the subnet declaration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-syslinux-files</td>
        <td>Syslinux files to install on TFTP (copied from $tftp_syslinux_root)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-syslinux-root</td>
        <td>Directory that hold syslinux files</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-trusted-hosts</td>
        <td>Only hosts listed will be permitted, empty array to disable authorization</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-use-sudoersd</td>
        <td>Add a file to /etc/sudoers.d (true) or uses augeas (false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-user</td>
        <td>User under which foreman proxy will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent</td>
        <td>Should a puppet agent be installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-noop</td>
        <td>Run the agent in noop mode.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-template</td>
        <td>Use a custom template for the agent puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-auth-template</td>
        <td>Use a custom template for the auth configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-ca-server</td>
        <td>Use a different ca server. Should be either a string with the location of the ca_server or 'false'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-classfile</td>
        <td>The file in which puppet agent stores a list of the classes associated with the retrieved configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-client-package</td>
        <td>Install a custom package to provide the puppet client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-configtimeout</td>
        <td>How long the client should wait for the configuration to be retrieved before considering it a failure.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-cron-cmd</td>
        <td>Specify command to launch when runmode is set 'cron'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dir</td>
        <td>Override the puppet directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-group</td>
        <td>Override the name of the puppet group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-listen</td>
        <td>Should the puppet agent listen for connections.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-main-template</td>
        <td>Use a custom template for the main puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-nsauth-template</td>
        <td>Use a custom template for the nsauth configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginsync</td>
        <td>Enable pluginsync.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-port</td>
        <td>Override the port of the master we connect to.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runinterval</td>
        <td>Set up the interval (in seconds) to run the puppet agent.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runmode</td>
        <td>Select the mode to setup the puppet agent. Can be either 'cron' or 'service'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server</td>
        <td>Should a puppet master be installed as well as the client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-app-root</td>
        <td>Directory where the application lives</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca</td>
        <td>Provide puppet CA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-certname</td>
        <td>The name to use when handling certificates.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-common-modules-path</td>
        <td>Common modules paths (only when $server_git_repo_path and $server_dynamic_environments are false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-config-version</td>
        <td>How to determine the configuration version. When using git_repo, by default a git describe approach will be installed.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dir</td>
        <td>Puppet configuration directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dynamic-environments</td>
        <td>Use $environment in the modulepath</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-enc-api</td>
        <td>What version of enc script to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments</td>
        <td>Environments to setup (creates directories). Applies only when $server_dynamic_environments is false</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-owner</td>
        <td>The owner of the environments directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-envs-dir</td>
        <td>Directory that holds puppet environments</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-external-nodes</td>
        <td>External nodes classifier executable</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-facts</td>
        <td>Should foreman receive facts from puppet</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-ca</td>
        <td>SSL CA of the Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-cert</td>
        <td>Client certificate for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-key</td>
        <td>Key for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-url</td>
        <td>Foreman URL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-branch-map</td>
        <td>Git branch to puppet env mapping for the default post receive hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo</td>
        <td>Use git repository as a source of modules</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-path</td>
        <td>Git repository path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-group</td>
        <td>Name of the puppetmaster group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-httpd-service</td>
        <td>Apache/httpd service name to notify on configuration changes. Defaults to 'httpd' based on the default apache module included with foreman-installer.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-manifest-path</td>
        <td>Path to puppet site.pp manifest (only when $server_git_repo_path and $server_dynamic_environments are false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-package</td>
        <td>Custom package name for puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger</td>
        <td>If set to true, we will configure apache with passenger. If set to false, we will enable the default puppetmaster service unless service_fallback is set to false. See 'Advanced server parameters' for more information.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger-max-pool</td>
        <td>The PassengerMaxPoolSize parameter. If your host is low on memory, it may be a good thing to lower this. Defaults to 12.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-port</td>
        <td>Puppet master port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-content</td>
        <td>Which template to use for git post hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-name</td>
        <td>Name of a git hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppet-basedir</td>
        <td>Where is the puppet code base located</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppet-home</td>
        <td>Puppet var directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-report-api</td>
        <td>What version of report processor to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-reports</td>
        <td>List of report types to include on the puppetmaster</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-service-fallback</td>
        <td>If passenger is not used, do we want to fallback to using the puppetmaster service? Set to false if you disabled passenger and you do NOT want to use the puppetmaster service. Defaults to true.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ssl-dir</td>
        <td>SSL directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-storeconfigs-backend</td>
        <td>Do you use storeconfigs? (note: not required) false if you don't, "active_record" for 2.X style db, "puppetdb" for puppetdb</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-template</td>
        <td>Which template should be used for master configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-user</td>
        <td>Name of the puppetmaster user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-vardir</td>
        <td>Puppet data directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-show-diff</td>
        <td>Show and report changed files with diff output</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-splay</td>
        <td>Switch to enable a random amount of time to sleep before each run.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-user</td>
        <td>Override the name of the puppet user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-version</td>
        <td>Specify a specific version of a package to install. The version should be the exact match for your distro. You can also use certain values like 'latest'.</td>
      </tr>
    </tbody>
  </table>
</div>

#### Answers file

The answers file describes the classes that will be applied to the host to
install Foreman, along with their parameters.  The foreman-installer package stores it at `/etc/foreman/foreman-installer.yaml`.  By default, the *all-in-one* setup will include Foreman, a puppetmaster, Puppet agent, and the Smart Proxy:

{% highlight yaml %}
---
foreman:
  custom_repo: true
foreman_proxy:
  custom_repo: true
puppet:
  server: true
{% endhighlight %}

Other examples are given in the next section, or `/usr/share/foreman-installer/README.md`.
